Home page update

--- a/client/src/Components/Header/Header.module.css
+++ b/client/src/Components/Header/Header.module.css
@@ -1,28 +1,36 @@
 .navbar{
-    padding-top: 0;
     padding-bottom: 0;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-bottom: 30px;
 }
 
 .navbrand{
-    width: 100px;
     text-align: center;
 }
 
 .navlinkbar{
-    padding-top: 30px;
-    padding-bottom: 15px;
-    border-bottom-width: 5px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    border-bottom-width: 8px;
     border-bottom-style: solid;
-    border-bottom-color: gray;
+    border-bottom-color: rgb(150,150,150);
 }
 
 .navlink{
-    font-size: 23px;
+    font-weight: 500;
+    font-size: 30px;
+    color: rgb(80,80,80) !important;
 }
 
 .navicon{
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 130px;
+}
+
+@media  screen and (max-width:1610px) {
+    .navlink{
+        font-size: 25px;
+    }
 }
