Add Background Image - Current Vacancies

--- a/client/src/Components/Vacancies/style.module.css
+++ b/client/src/Components/Vacancies/style.module.css
@@ -47,7 +47,7 @@
 }
 
 .ban {
-  background-color: yellow;
+  background-image: url("./Images/background.png");
   margin-bottom: 4%;
   padding: 2%;
   text-align: center;
