--- a/client/src/Components/Internship/Vacancies/style.module.css
+++ b/client/src/Components/Internship/Vacancies/style.module.css
@@ -1,8 +1,6 @@
 .content {
   background-color: white;
   color: black;
-  margin: 2%;
-  padding: 4%;
 }
 
 .heading {
@@ -16,13 +14,19 @@
 }
 
 .image {
-  height: 100%;
-  width: 100%;
+  display: block;
+  margin: 0 auto;
+  height: 150px;
+  width: 150px;
+  padding: 0;
 }
 
 .theBack {
-  height: 10em;
-  position: relative
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn {
@@ -81,6 +85,16 @@
     background-color: black;
     color: white;
   }
+}
+
+.card {
+  margin-bottom: 6%;
+}
+
+.backPara {
+  text-align: center;
+  padding: 1%;
+  line-height: 1.5;
 }
 
 @media screen and (max-width: 767px) {
