--- a/client/src/Components/Home/Collaboration.module.css
+++ b/client/src/Components/Home/Collaboration.module.css
@@ -22,6 +22,7 @@ h1{
     margin-bottom: 7%;
     background: url("https://lh3.googleusercontent.com/d/16vgc8HB7AT_OmWDiN-gEqXXCNIBiovLX=s220?authuser=0");
     background-size: 700px;
+    padding-left: 7%;
 }
 
 .leftPart{
