--- a/client/src/Components/Home/Rehabilitation/Rehabilitation.module.css
+++ b/client/src/Components/Home/Rehabilitation/Rehabilitation.module.css
@@ -22,7 +22,7 @@
   text-align: center;
   
   font-weight: bold;
-  font-size: max(4vh, 30px);
+  font-size: max(2vw, 30px);
 }
 
 .text{
@@ -34,8 +34,8 @@
   padding-right: 10%;
   
   line-height: 2;
-  text-align: center;
-  font-size: max(3vh,20px);
+  text-align: justify;
+  font-size: max(1.6vw,20px);
 }
 
 .logo{
@@ -43,6 +43,6 @@
   margin: 0;
   padding: 0;
   
-  width: max(100px,12vh);
-  height: max(100px,12vh);
+  width: max(90px,6vw);
+  height: max(90px,6vw);
 }
