switched local img to urls

--- a/client/src/Components/Home/Capsule/Capsule.module.css
+++ b/client/src/Components/Home/Capsule/Capsule.module.css
@@ -48,5 +48,6 @@
     padding-top: 10px;
     padding-bottom: 10px;
 
-    background-image: url('./Images/Backgrounds/red.png');
+    background: none;
+    background-image: url('https://drive.google.com/uc?id=148JwyuEoFrz7-Pj-6p5VlZk7754Wjlix');
 }
