--- a/client/src/Components/Home/Journey/Journey.module.css
+++ b/client/src/Components/Home/Journey/Journey.module.css
@@ -7,7 +7,7 @@
     
     text-align: center;
     background-size: cover;
-    background-image: url('./Images/Backgrounds/green.png');
+    background-image: url('https://drive.google.com/uc?id=1RQIO0SvP_FlKc3xxjrDe5OPhQDaT02IN');
 }
 
 .text{
