--- a/client/src/Components/Home/Mission/Mission.module.css
+++ b/client/src/Components/Home/Mission/Mission.module.css
@@ -1,5 +1,5 @@
 .holder{
-    background-image: url('./Images/Backgrounds/blue.png');
+    background-image: url('https://drive.google.com/uc?id=1lVfrjckw4HX2dOJi0eS2futm667_lANr');
 }
 
 .content{
@@ -15,7 +15,7 @@
     background-size: 50% 100%;
     background-repeat: no-repeat;
     background-position-x: right;
-    background-image: url('./Images/Icons/lamp.png');
+    background-image: url('https://drive.google.com/uc?id=128DySXhU5Wa65ci2fbtKjZ0TO-gwYrFb');
 }
 
 .heading{
