--- a/client/src/Components/Home/Rehabilitation/Rehabilitation.module.css
+++ b/client/src/Components/Home/Rehabilitation/Rehabilitation.module.css
@@ -9,7 +9,7 @@
   text-align-last: center;
 
   background-size: cover;
-  background-image: url('./Images/Backgrounds/yellow.png');
+  background-image: url('https://drive.google.com/uc?id=19CKc829ygCxs2ukFJtcsyJIqD7dIfQYP');
 }
 
 .heading{
