--- a/client/src/Components/Home/Journey/Journey.module.css
+++ b/client/src/Components/Home/Journey/Journey.module.css
@@ -1,5 +1,6 @@
 .icon{
-    height: max(5vw,70px);
+    margin: 0;
+    height: max(5vw,50px);
 }
 
 .holder{
@@ -62,4 +63,10 @@
     color: black;
     font-size: max(1.6vw,20px);
     font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+    .caption{
+        margin-bottom: 25px;
+    }
 }
