--- a/client/src/Components/Home/Mission/Mission.module.css
+++ b/client/src/Components/Home/Mission/Mission.module.css
@@ -3,7 +3,6 @@
 }
 
 .content{
-    padding: 0;
     padding-top: 5vh;
     padding-bottom: 5vh;
 
@@ -33,7 +32,8 @@
 }
 
 .para1, .para2{
-    font-size: max(1.65vw,20px);
+    padding: 0;
+    font-size: max(1.65vw,18px);
     font-style: normal;
 }
 
@@ -49,7 +49,6 @@
 
     .para1, .para2{
         width: 100%;
-        text-align: justify;
-        text-justify: distribute;
+        text-align: center;
     }
 }
