--- a/client/src/Components/Home/Rehabilitation/Rehabilitation.module.css
+++ b/client/src/Components/Home/Rehabilitation/Rehabilitation.module.css
@@ -16,13 +16,14 @@
   
   margin: 0;
   
+  padding: 10%;
   padding-top: 3vh;
   padding-bottom: 3vh;
   
   text-align: center;
   
   font-weight: bold;
-  font-size: max(2vw, 30px);
+  font-size: max(2vw, 25px);
 }
 
 .text{
@@ -34,8 +35,8 @@
   padding-right: 10%;
   
   line-height: 2;
-  text-align: justify;
-  font-size: max(1.6vw,20px);
+  text-align: center;
+  font-size: max(1.6vw,18px);
 }
 
 .logo{
@@ -43,6 +44,6 @@
   margin: 0;
   padding: 0;
   
-  width: max(90px,6vw);
-  height: max(90px,6vw);
+  width: max(6vw, 80px);
+  height: max(6vw, 80px);
 }
