changed header in mobile view

--- a/client/src/Components/Header/Header.module.css
+++ b/client/src/Components/Header/Header.module.css
@@ -24,13 +24,37 @@
     color: rgb(80,80,80) !important;
 }
 
-.navicon{
-    width: 130px;
-    height: 130px;
+.brandicon{
+    width: 70px;
+}
+
+.brandname{
+    margin: 0;
+    width: 120px;
+    margin-top: 5px;
+    font-size: 13px;
+    font-weight: bold;
+    white-space: normal;
 }
 
 @media  screen and (max-width:1610px) {
     .navlink{
         font-size: 25px;
+    }
+}
+
+@media  screen and (max-width:1400px) {
+
+    .brandicon{
+        width: 60px;
+    }
+
+    .navlink{
+        font-size: 20px;
+    }
+
+    .navbrand{
+        display: flex;
+        flex-direction: row;
     }
 }
