added routing in header

--- a/client/src/Components/Header/Header.module.css
+++ b/client/src/Components/Header/Header.module.css
@@ -19,9 +19,14 @@
 }
 
 .navlink{
-    font-weight: 500;
     font-size: 30px;
+    font-weight: 500;
     color: rgb(80,80,80) !important;
+}
+
+.navlink:hover{
+    color: green !important;
+    text-decoration: underline;
 }
 
 .brandicon{
