--- a/client/src/Components/Home/Capsule/Capsule.module.css
+++ b/client/src/Components/Home/Capsule/Capsule.module.css
@@ -26,17 +26,17 @@
 }
 
 .description{
-    font-size: max(1.6vw, 18px);
+    font-size: max(1.6vw, 16px);
     color: rgb(100, 100, 100);
 
-    text-align: center;
+    text-align: justify;
     margin-top: max(5vh, 30px);
     margin-bottom: max(5vh, 30px);
 }
 
 .button{
     color: rgb(80, 80, 80);
-    font-size: max(1.6vw, 18px);
+    font-size: max(1.6vw, 16px);
 
     border-style: none;
 
