--- a/client/src/Components/Home/Mission/Mission.module.css
+++ b/client/src/Components/Home/Mission/Mission.module.css
@@ -33,7 +33,7 @@
 
 .para1, .para2{
     padding: 0;
-    font-size: max(1.65vw,18px);
+    font-size: max(1.65vw,16px);
     font-style: normal;
 }
 
@@ -49,6 +49,6 @@
 
     .para1, .para2{
         width: 100%;
-        text-align: center;
+        text-align: justify;
     }
 }
