--- a/client/src/Components/AboutUs/CarouselWithoutThumbnail.css
+++ b/client/src/Components/AboutUs/CarouselWithoutThumbnail.css
@@ -71,40 +71,8 @@
     .carousel .thumbs-wrapper {
       margin: 20px;
       overflow: hidden;
+      display:none;
     }
-    .carousel .thumbs {
-      -webkit-transition: all 0.15s ease-in;
-      -moz-transition: all 0.15s ease-in;
-      -ms-transition: all 0.15s ease-in;
-      -o-transition: all 0.15s ease-in;
-      transition: all 0.15s ease-in;
-      -webkit-transform: translate3d(0, 0, 0);
-      -moz-transform: translate3d(0, 0, 0);
-      -ms-transform: translate3d(0, 0, 0);
-      -o-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
-      position: relative;
-      list-style: none;
-      white-space: nowrap; }
-    .carousel .thumb {
-      -webkit-transition: border 0.15s ease-in;
-      -moz-transition: border 0.15s ease-in;
-      -ms-transition: border 0.15s ease-in;
-      -o-transition: border 0.15s ease-in;
-      transition: border 0.15s ease-in;
-      display: inline-block;
-      margin-right: 6px;
-      white-space: nowrap;
-      overflow: hidden;
-      border: 3px solid #fff;
-      padding: 2px; }
-      .carousel .thumb:focus {
-        border: 3px solid #ccc;
-        outline: none; }
-      .carousel .thumb.selected, .carousel .thumb:hover {
-        border: 3px solid #333; }
-      .carousel .thumb img {
-        vertical-align: top; }
     .carousel.carousel-slider {
       position: relative;
       margin: 0;
