--- a/client/src/Components/Internship/Vacancies/style.module.css
+++ b/client/src/Components/Internship/Vacancies/style.module.css
@@ -7,6 +7,7 @@
   margin-top: 10%;
   text-decoration: underline;
   text-align: center;
+  font-weight: bold;
 }
 
 .para {
@@ -59,7 +60,7 @@
 
 .ban {
   margin-bottom: 4%;
-  padding: 2%;
+ 
   text-align: center;
 }
 
@@ -70,7 +71,18 @@
   border-top: 6px solid black;
   opacity: 1;
 }
-
+.head{
+  font-weight: bolder;
+  
+  text-align: center;
+  font-size: 40px;
+  text-decoration: underline;
+  padding-left: 100px;
+}
+.ban{
+  padding: 4%;
+    padding-bottom: 10px;
+}
 @keyframes colorChange {
   0% {
     background-color: black;
@@ -111,9 +123,15 @@
   }
 
   .ban {
+    margin-top: 50px;
+    margin-bottom: 50px;
     padding: 6%;
+    padding-bottom: 20px;
   }
-
+  .head{
+    padding-top: 10px;
+    padding-left: 50px;
+  }
   .rule {
     width: 50%;
   }
