--- a/client/src/Components/GetInTouch/ContactUs/ContactUs.module.css
+++ b/client/src/Components/GetInTouch/ContactUs/ContactUs.module.css
@@ -7,7 +7,7 @@
 
 .holder{
     margin: 0;
-    padding: max(5%, 15px);
+    padding: 5%;
 }
 
 .heading{
@@ -91,6 +91,11 @@
 }
 
 @media screen and (max-width: 992px){
+
+    .holder{
+        padding-left: 0%;
+        padding-right: 0%;
+    }
 
     .heading{
         font-size: 30px;
