--- a/client/src/Components/FAQ/FAQImage/FAQImage.module.css
+++ b/client/src/Components/FAQ/FAQImage/FAQImage.module.css
@@ -1,38 +1,20 @@
 .body{
     margin: 0;
     padding: 0;
-    margin-bottom: 100px;
-}
-
-.col{
-    padding: 0;
+    margin-bottom: 50px;
 }
 
 .imageholder{
     margin: 0;
     padding: 0;
+    padding-left: 5vw;
+    padding-right: 5vw;
 }
 
 .image{
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
-}
-
-.icons{
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.icon{
-    margin: 0;
-    padding: 0;
-    width: 4vw;
-    margin-left: 10%;
-    margin-bottom: 1vw;
 }
 
 .textholder{
@@ -53,18 +35,6 @@
     .body{
         margin-bottom: 50px;
     }
-
-    .icons{
-        padding: 10px;
-        flex-direction: row;
-    }
-    
-    .icon{
-        margin: 3px;
-        margin-left: 10px;
-        margin-right: 10px;
-        width: 40px;
-    }
     
     .imageholder{
         padding: 0;
@@ -72,6 +42,8 @@
     
     .textholder{
         padding: 10px;
+        padding-left: 5px;
+        padding-right: 5px;
     }
     
     .text{
