--- a/client/src/Components/Initiatives/Section1.module.css
+++ b/client/src/Components/Initiatives/Section1.module.css
@@ -5,12 +5,14 @@
 .HeadText {
     /*font-family: 'GlacialIndifferenceRegular';
     color      : #625D5D;*/
-    font-size  : 2.4vw;
-    font-weight: bold;
+    font-family: "Open Sans", sans-serif;
+    margin-left: 55px;
+    font-size: 40px;
+    font-weight: 700;
 }
 
 .HeadLine {
-    width     : 74%;
+    width     : 66%;
     margin-top: -3.5%;
     float     : right;
     border-top: 6px solid #0c0b0b00;
