--- a/client/src/Components/Initiatives/Section3.module.css
+++ b/client/src/Components/Initiatives/Section3.module.css
@@ -18,9 +18,11 @@
   }
 
   .h{
-    font-size: 35px;
-    font-weight: bolder;
-    margin-left: 0%;
+    margin-top: 55px;
+    margin-left: 55px;
+    font-size: 40px;
+    font-weight: 700;
+    font-family: "Open Sans", sans-serif;
   }
 
   .pink{
@@ -42,8 +44,7 @@
   .contenp {
     width: 100%;
     height: 100%;
-    font-size: 25px;
-    font-weight: bold;
+    font-size: 18px;
     text-align: justify;
     display: flex;
     align-items: center; 
@@ -63,7 +64,10 @@
       padding-left: 3%;
     }
     .h {
-      font-size: 8vw;
-      margin-left: 2%;
+      font-size: 7vw;
+      margin-left: 5%;
+      margin-top: -50%;
+      text-align: center;
+      align-items: center;
     }
    }
