--- a/client/src/Components/Initiatives/Section2.module.css
+++ b/client/src/Components/Initiatives/Section2.module.css
@@ -107,11 +107,11 @@
   right: 10px;
   bottom: 3px;
   border: none;
-  background: green;
-  color: white;
   border-radius: 18px;
   padding-left: 12px;
   padding-right: 12px;
+  background: green;
+  color: white;
 }
 
 .Dnext:hover {
@@ -125,11 +125,11 @@
   left: 10px;
   bottom: 3px;
   border: none;
-  background: green;
-  color: white;
   border-radius: 18px;
   padding-left: 12px;
   padding-right: 12px;
+  background: green;
+  color: white;
 }
 
 .Dprevious:hover {
@@ -183,6 +183,14 @@
   .container3,
   .container4 {
     margin-left: 20px;
+  }
+}
+
+@media screen and (max-width: 1050px){
+  .Dprevious, .Dnext, .next, .previous {
+    display: block;
+    width: auto;
+    height: auto;
   }
 }
 
@@ -296,7 +304,7 @@
   }
 
   .heading h1 {
-    margin-left: 20px;
+    margin-left: 30px;
     font-size: 25px;
     margin-top: 30px;
   }
@@ -332,7 +340,9 @@
     background: green;
     color: white;
     list-style: bold;
-    border-radius: 20px;
+    border-radius: 18px;
+    padding-left: 12px;
+    padding-right: 12px;
     cursor: pointer;
   }
 
@@ -347,7 +357,9 @@
     background: green;
     color: white;
     list-style: bold;
-    border-radius: 20px;
+    border-radius: 18px;
+    padding-left: 12px;
+    padding-right: 12px;
     cursor: pointer;
   }
 
@@ -418,6 +430,7 @@
   .heading h1 {
     font-size: 22px;
     margin-top: 30px;
+    margin-left: 35px;
   }
   .contentDetails p {
     position: absolute;
@@ -477,7 +490,7 @@
   }
 
   .heading h1 {
-    margin-left: 20px;
+    margin-left: 30px;
     font-size: 22px;
     margin-top: 30px;
   }
@@ -610,11 +623,30 @@
   }
 
   .heading h1 {
-    margin-left: 10px;
+    margin-left: 40px;
     font-size: 20px;
   }
 
   .contentDetails p {
     font-size: 14px;
+  }
+}
+@media screen and (max-width: 318px) {
+
+  .container1,.container2,.container3,.container4,.container5,.container6,.container7{
+    width:100%;
+    /* height:96%; */
+  }
+  .front1,.front2,.front3,.front4,.front5,.front6,.front7{
+    margin:0;
+    /* height:100% */
+  }
+  .imagePart{
+    padding:0px;
+  }
+  .imagePart img{
+    width:100%;
+    height:100%;
+    display:block;
   }
 }
