--- a/client/src/Components/Home/SuccessMedia/SuccessChild/Stories/Stories.module.css
+++ b/client/src/Components/Home/SuccessMedia/SuccessChild/Stories/Stories.module.css
@@ -30,19 +30,14 @@
     background-image: url('https://drive.google.com/uc?id=1sATPrWrtpApDsvAB_eUP6WGuA0PJmYgO');
 }
 
-.imageCol{
-    margin: 0;
-    padding: 0;
-}
-
 .textCol{
     margin: 0;
-    padding: 4vw;
+    padding: 2vw;
 }
 
 .heading{
     margin: 0;
-    padding: 0;
+    padding: 1vw;
     text-align: center;
     font-size: 3vw;
     font-weight: bold;
@@ -61,46 +56,20 @@
 .imagebox{
     margin: 0;
     padding: 0;
-    height: 90%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    background-color: grey;
 }
 
-.imageleft{
-    margin: 0;
+.image{
+    margin: auto;
     padding: 0;
+    width: 95%;
 }
 
-.imageright{
-    margin: 0;
-    padding: 0;
+.smallhide{
+    display: flex;
 }
 
-.halftop{
-    margin: 0;
-    padding: 4%;
-    width: 100%;
-    height: 50%;
-    padding-bottom: 2%;
-    padding-right: 2%;
-}
-
-.halfbottom{
-    margin: 0;
-    padding: 4%;
-    width: 100%;
-    height: 50%;
-    padding-top: 2%;
-    padding-right: 2%;
-}
-
-.full{
-    margin: 0;
-    padding: 4%;
-    width: 100%;
-    height: 100%;
-    padding-left: 2%;
+.bighide{
+    display: none;
 }
 
 @media screen and (max-width:767px) {
@@ -115,5 +84,18 @@
     
     .text{
         font-size: 16px;
+    }
+
+    .textCol{
+        padding: 4vw;
+    }
+
+    .smallhide{
+        display: none;
+    }
+
+    .bighide{
+        display: flex;
+        flex-direction: column;
     }
 }
