changed success story image for mobile

--- a/client/src/Components/Home/SuccessMedia/SuccessChild/SuccessImage/SuccessImage.module.css
+++ b/client/src/Components/Home/SuccessMedia/SuccessChild/SuccessImage/SuccessImage.module.css
@@ -30,10 +30,14 @@
     text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     
     .imageholder{
         padding: 0;
+    }
+
+    .image{
+        content: url('https://drive.google.com/uc?id=12cmaEYiDXrqvX1AwyJsdIbt0INcA0QOO');
     }
 
 }
