--- a/client/src/Components/AboutUs/Collab/FormSection.module.css
+++ b/client/src/Components/AboutUs/Collab/FormSection.module.css
@@ -1,27 +1,86 @@
-.formsection{
-  margin: 20px 55px;
-  padding: 10px 30px;
- background-image: url(https://drive.google.com/uc?id=1f3ljJgoCfyHuDEKG6m_-D3_Yg4Jwbn04);
+.body{
+  margin: 0;
+  padding: 0;
+  padding-left: 5vw;
+  padding-right: 5vw;
+  margin-bottom: 50px;
 }
-.tt{
-  font-size: 25px;
-  margin-left: 20px;
-}
-.tt1{
-  font-size: 23px;
-}
-.tt3{
-  padding-right: 580px;
 
+.header{
+  font-size: 1.4vw;
 }
-.tt4{
-  font-size: 25px;
-  margin-bottom: 20px;
+
+.holder{
+  margin: 0;
+  padding: 1.5vw;
+  background-image: url('https://drive.google.com/uc?id=1f3ljJgoCfyHuDEKG6m_-D3_Yg4Jwbn04');
 }
+
+.input{
+  margin: 0;
+  padding: 0;
+  width: 60%;
+  padding: 8px;
+  font-size: 1.4vw;
+  margin-bottom: 1.5vw;
+}
+
+.textbox{
+  margin: 0;
+  padding: 8px;
+  width: 100%;
+  height: 12vw;
+  font-size: 1.4vw;
+  margin-bottom: 1.5vw;
+}
+
 .submit{
-  font-size: 25px;
-  padding: 10px 10px;
-  margin-bottom: 20px;
-  margin-left: 1200px;
-  border-radius: 30%;
+  margin: 0;
+  padding: 4px;
+  float: right;
+  color: black;
+  font-size: 1.4vw;
+  font-weight: bold;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 1.5vw;
+  margin-bottom: 1.5vw;
+  border-style: none;
+  background-color: white;
+}
+
+.submit:hover{
+  border-width: 2px;
+  border-style: solid;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+@media screen and (max-width: 991px) {
+  
+  .header{
+    font-size: 20px;
+  }
+  
+  .input{
+    width: 100%;
+    padding: 15px;
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+  
+  .textbox{
+    height: 200px;
+    padding: 15px;
+    font-size: 18px;
+    padding-top: 10px;
+    margin-bottom: 15px;
+  }
+
+  .submit{
+    font-size: 18px;
+    border-radius: 15px;
+    margin-bottom: 15px;
+  }
+
 }
