--- a/client/src/Components/Home/WorksComp/Work.module.css
+++ b/client/src/Components/Home/WorksComp/Work.module.css
@@ -3,24 +3,15 @@
 }
 
 .HeadText {
-    font-family: 'GlacialIndifferenceRegular';
-    color      : #625D5D;
-    font-size  : 5vw;
-}
-
-.HeadLine {
-    width     : 60%;
-    margin-top: -5%;
-    float     : right;
-    border-top: 4px solid #D9D9D9;
-    position  : relative;
+    color    : rgba(0, 0, 0, 0.726);
+    font-size: 5vw;
 }
 
 .card_title {
-    font-family: 'GlacialIndifferenceRegular';
     font-size  : 2vw;
-    font-weight: bold;
+    font-weight: 200;
     padding    : 1% 0 3% 0;
+    color      : #796060;
 }
 
 .card {
@@ -74,14 +65,9 @@
     }
 
     .HeadText {
-        font-size: 10vw;
-        margin-left: 9%;
+        font-size    : 10vw;
+        margin-left  : 9%;
+        margin-bottom: -10%;
     }
 
-    .HeadLine {
-        width     : 48%;
-        margin-top: -3vh;
-        float     : right;
-        border-top: 4px solid #D9D9D9;
-    }
 }
